2010-03-11  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Simon Hausmann.

        Allow custom memory allocation control for RenderLayerBacking class
        https://bugs.webkit.org/show_bug.cgi?id=35857

        Inherits the following class from Noncopyable because it is
        instantiated by 'new' and no need to be copyable:                                     

        class name    - instantiated at: WebCore/'location'
        RenderLayerBacking - rendering/RenderLayer.cpp:3047

        * rendering/RenderLayerBacking.h:

2010-03-11  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Simon Hausmann.

        Allow custom memory allocation control for TimingFunction struct
        https://bugs.webkit.org/show_bug.cgi?id=35855

        Inherits the following struct from FastAllocBase because it is 
        instantiated by 'new':

        class name    - instantiated at: WebCore/'location'
        TimingFuction - platform/graphics/GraphicsLayer.h:89

        * platform/animation/TimingFunction.h:

2010-03-10  Gavin Barraclough  <barraclough@apple.com>

        Rubber stamped by Oliver Hunt.
        
        Rename JSC::UStringImpl::data() to characters(), to match WebCore::StringImpl.

        * bridge/jni/jsc/JavaStringJSC.h:
        (JSC::Bindings::JavaStringImpl::uchars):
        * platform/text/AtomicString.cpp:
        (WebCore::AtomicString::add):
        (WebCore::AtomicString::find):

2010-03-10  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Mark Rowe.

        Fix for r55825, threadsafeCopy no longer needs to special-case for
        empty strings (in fact, doing so results in leaks).

        * platform/text/StringImpl.cpp:
        (WebCore::StringImpl::threadsafeCopy):

2010-03-10  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Darin Adler.

        While calculating alpha channel, convert the floating point value to
        an integer in [0, 256) with equal distribution.